# transformers

./: main.py  pyproject.toml  transformer_reverse.pth
data/: data.py
models/: decoder.py  encoder.py  multihead_attention.py  positional_encoding.py  test_encoder.py  transformer.py
